# FinScope_TCC

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Detalhamento.md  README.md  README_INTEGRACAO_ML.md  TAGS.xlsx  fin_utils.py  finscope_gui.py  integration_ml.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  start.cmd
Modulo_Solidos_ML/: Pipeline_Machine_learning_TAXA_CONSUMO.md  README.md  budget_projection.py  data_import.py  fix_excel_abas.py  main.py  pipeline.py  prepare_history.py
Modulo_Solidos_ML/budget/: __init__.py  config.py  export.py  ipca.py  metrics.py  projection.py
config/: params.yaml
core/: __init__.py  async_excel.py  base_historica_builder.py  fin_params.py  logger.py  params_validator.py  pipeline_utils.py
data/: TAB_AUX.xlsx
gui/: __init__.py  styles.py  widgets.py
tests/: __init__.py
tests/test_core/: test_fin_params.py  test_logger.py  test_params_validator.py  test_pipeline_utils.py
