[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finscope"
version = "1.0.0"
description = "Sistema de análise financeira e orçamentária com ML"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Roger S. Alves", email = "roger.alves@example.com"}
]
keywords = [
    "finance",
    "budget",
    "machine-learning",
    "forecasting",
    "analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]
gui = [
    "ttkthemes>=3.2.0",
]
database = [
    "pyodbc>=5.0.0",
]
all = [
    "finscope[dev,docs,gui,database]",
]

[project.urls]
Homepage = "https://github.com/rogersialves/FinScope"
Documentation = "https://rogersialves.github.io/FinScope"
Repository = "https://github.com/rogersialves/FinScope.git"
Issues = "https://github.com/rogersialves/FinScope/issues"

[project.scripts]
finscope = "finscope_gui:main"
finscope-validate = "core.params_validator:validate_and_log"

[tool.setuptools]
packages = ["core", "gui", "Modulo_PA", "Modulo_PisCofins", "Modulo_PT", "Modulo_Relatorios", "Modulo_Solidos", "Modulo_Solidos_ML"]
py-modules = ["finscope_gui", "fin_utils", "integration_ml"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.xlsx"]

# Black formatter
[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
    | site
)/
'''

# isort
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".git", "__pycache__", "site", "build", "dist"]
known_first_party = ["core", "gui", "Modulo_PA", "Modulo_PisCofins", "Modulo_PT", "Modulo_Relatorios", "Modulo_Solidos", "Modulo_Solidos_ML"]

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# coverage
[tool.coverage.run]
source = ["core", "Modulo_PA", "Modulo_PisCofins", "Modulo_Relatorios", "Modulo_Solidos", "Modulo_Solidos_ML"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 40

# mypy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "site",
    "build",
    "dist",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "openpyxl.*",
    "xlsxwriter.*",
    "sklearn.*",
    "statsmodels.*",
    "scipy.*",
    "PIL.*",
    "pyodbc.*",
]
ignore_missing_imports = true

# flake8 (via pyproject.toml não é nativo, usar .flake8 ou setup.cfg)
# Configuração abaixo para referência - flake8 ainda usa setup.cfg ou .flake8

# ruff (alternativa moderna ao flake8)
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    "site",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["S101"]  # assert allowed in tests
